project/final_project/solution1/csim/report/hardware_encoding_csim.log
INFO: [SIM 2] *************** CSIM start ***************
INFO: [SIM 4] CSIM will launch GCC as the compiler.
   Compiling ../../../../Server/Testbench.cpp in debug mode
../../../../Server/Testbench.cpp: In function ‘int main()’:
../../../../Server/Testbench.cpp:72:56: error: too few arguments to function ‘void hardware_encoding(unsigned char*, unsigned char*, int*, int*, int*)’
  hardware_encoding(Input, Output_HW, size_HW, hw_length);
                                                        ^
In file included from ../../../../Server/Testbench.cpp:4:0:
../../../../Server/LZW_new.h:13:6: note: declared here
 void hardware_encoding(unsigned char s1[CHUNKS*8192],unsigned char output[CHUNKS*CHUNK_SIZE],int lzw_size[CHUNKS],int input_size[CHUNKS],int chunk_number[1]);
      ^~~~~~~~~~~~~~~~~
make: *** [csim.mk:72: obj/Testbench.o] Error 1
ERR: [SIM 100] 'csim_design' failed: compilation error(s).
INFO: [SIM 3] *************** CSIM finish ***************
